feat: first init

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ww-runsha",
+  "name": "www-runsha",
   "version": "1.0.0",
   "description": "Website template for Payload",
   "license": "MIT",
