--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@payloadcms/admin-bar": "3.58.0",
+    "@payloadcms/db-postgres": "3.58.0",
     "@payloadcms/live-preview-react": "3.58.0",
     "@payloadcms/next": "3.58.0",
     "@payloadcms/payload-cloud": "3.58.0",
@@ -51,10 +52,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "7.45.4",
-    "sharp": "0.34.2",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@payloadcms/db-postgres": "3.58.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
